Rajouts des 4 premiers projets

--- a/index.html
+++ b/index.html
@@ -89,7 +89,12 @@
                     <img src="Image/Projet_web.jpg" alt="Projet 1">
                     <div class="overlay">
                         <h3>Projet Web</h3>
-                        <p>Description du projet 1.</p>
+                        <p>L'interet du projet étais à la fois de découvrir le code pour certain
+                            et de créé un site à l'image du codeur. l'important étais surtout basé
+                            sur le front-end que le back-end... en tout cas, au début. L'HTML et le CSS
+                            étais sur 1 semaine, le SQL idem, PHP idem, et JavaScript idem. Donc un totale
+                            de 4 semaine pour se premier projet. 
+                        </p>
                     </div>
                 </div>
 
@@ -97,7 +102,15 @@
                     <img src="Image/Projet_python.jpg" alt="Projet 2">
                     <div class="overlay">
                         <h3>Projet Python</h3>
-                        <p>Description du projet 2.</p>
+                        <p>Qui dit seconds projet, dit seconds repository GIT... Point important à savoir :
+                            Nous n'avons pas été entrainer à utiliser GIT. Nous avons donc découvert les quelques problèmes
+                            comme les fameux "conflicts". Une autre équipe à été appelé "The Conflict Team".
+                            L'intéret de cette semaine étais de découvrir la virtuosité du language Python grâce à sont utilisation
+                            dans un filtre d'images.
+                            <br>
+                            <br>
+                            Rien de plus à rajouter.
+                        </p>
                     </div>
                 </div>
 
@@ -105,7 +118,13 @@
                     <img src="Image/Projet_gaming.jpg" alt="Projet 2">
                     <div class="overlay">
                         <h3>Projet Gaming</h3>
-                        <p>Description du projet 3.</p>
+                        <p>Semaine Gaming !!!!!! YYOOOOUUUUUHHHHHOOOOUUUUU !! J'adore le gaming : tellement de possibilité,
+                            de façon de faire les choses... Miam. L'intéret de cette semaine étais de découvrir les bases du gaming
+                            et les micro bases de la POO. Les pointeur, les objects, les acteurs... Tous pleins de bonne choses quoi.
+                            <br>
+                            <br>
+                            J'aurais d'autre chose à rajouter mais ça ne rentrera pas dans la case.
+                        </p>
                     </div>
                 </div>
 
@@ -113,7 +132,11 @@
                     <img src="Image/Projet_java_1.jpg" alt="Projet 2">
                     <div class="overlay">
                         <h3>Projet Java 1</h3>
-                        <p>Description du projet 4.</p>
+                        <p>Encore du gaming ? MAIS C'EST GÉNIAL !!!! Eh oui. Semaine POO Java (Donc pas spécielement gaming) pendant
+                            laquelle nous devions réaliser un jeux style tour par tour ( à la FFVII ) en interface 
+                            en utilisant les principes de bases de la POO java : Polymorphisme, Surcharge, Classe parents, interface
+                            
+                        </p>
                     </div>
                 </div>
 
