rajout Semaine PHP + Java 2

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
         <section id="projets-personnels" class="section projets-personnels"> <!-- Nouvelle section -->
             <div class="container">
                 <h2>Personal projects</h2>
-                <!-- Projets personnels -->
+                <p><!-- Remplir en fonction de l'avancée de se portefolio et de Metal requieme --> </p>
+                
             </div>
         </section>
 
@@ -134,8 +135,7 @@
                         <h3>Projet Java 1</h3>
                         <p>Encore du gaming ? MAIS C'EST GÉNIAL !!!! Eh oui. Semaine POO Java (Donc pas spécielement gaming) pendant
                             laquelle nous devions réaliser un jeux style tour par tour ( à la FFVII ) en interface 
-                            en utilisant les principes de bases de la POO java : Polymorphisme, Surcharge, Classe parents, interface
-                            
+                            en utilisant les principes de bases de la POO java : Polymorphisme, Surcharge, Classe parents, interface.
                         </p>
                     </div>
                 </div>
@@ -144,7 +144,16 @@
                     <img src="Image/Projet_Ecommerce.jpg" alt="Projet 2">
                     <div class="overlay">
                         <h3>Projet PHP</h3>
-                        <p>Description du projet 5.</p>
+                        <p>Ahlalalala... Le PHP... au première abords, on peut se dire : "mon dieu que le language est dure !" puis après avoir mieux
+                            regarder la bête que c'est, on se dit : "c'étais pas si compliqué que ça au final".
+                            C'est exactement se que j'ai vécu ! Et pourtant je me suis trés bien sortie.
+                            <br>
+                            l'intéret de la semaine étais de voir la relation entre un site et une base de donnée (tous 2 sécurisé et correctement créé).
+                            <br>
+                            <br>
+                            PS : Le projet étais décrit par le PO comme étant trés compliqué a réaliser en 3 jours.
+                            Pourtant, tou sles groupe avais fini le travail en temps et en heures.
+                        </p>
                     </div>
                 </div>
 
@@ -152,7 +161,17 @@
                     <img src="Image/Projet_java_2.jpg" alt="Projet 2">
                     <div class="overlay">
                         <h3>Projet Java 2</h3>
-                        <p>Description du projet 6.</p>
+                        <p>L'image ne représente pas du tout se que nous devions faire donc une explication s'impose : nous devions créé un jeux de plateau
+                            jouable de 2 à 4 joueur. Quand un joueur se déplace, il a le droit de détruire une case du plateau. Si un joueur est bloqué, il pert.
+                            Plutôt simple, non ? Mon groupe et moi même n'avons pas eu de difficulté sur cette semaine ( 12 stories réalisées en 1 jour (l'ensemble du jeux)).
+                            C'est pour cela que nous avons tous miser sur les bonus :
+                            <br> - Un rick roll réaliser par un colègue est moi même ( et je parle bien de la cover, pas de la feetur).
+                            <br> - Des easter egg sur certain pseudo de joueur.
+                            <br> - Des bruitage pour chaque action de joueur.
+                            <br>
+                            <br>
+                            Résultat ? Un 20/20 pour l'ensemble du groupe.
+                        </p>
                     </div>
                 </div>
                 <!-- Ajoutez plus de projets si nécessaire -->
