rajout de compétence + un peu de css

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <body>
         <header>
             <div class="container">
-                <h1>My Portfolio</h1>
                 <nav>
+                    <img src="image/Baniere.webp" alt="">
                     <ul>
                         <li><a href="#accueil">Home</a></li>
                         <li><a href="#formation">Training and Certifications</a></li>
@@ -56,7 +56,12 @@
                     <li>HTML5</li>
                     <li>CSS</li>
                     <li>JavaScript</li>
-                    <!-- Autres compétences -->
+                    <li>PHP</li>
+                    <li>C++</li>
+                    <li>C#</li>
+                    <li>Python</li>
+                    <li>Archi linux</li>
+                    <li>Scrum</li>
                 </ul>
             </div>
         </section>
@@ -178,7 +183,6 @@
             </div>
         </section>
 
-    <!--
         <section id="contact" class="section contact">
             <div class="container">
                 <h2>Contact</h2>
@@ -193,7 +197,7 @@
                 </form>
             </div>
         </section>
-    -->
+
         <footer>
             <div class="container">
                 <p>&copy; 2024 My Portfolio | All rights reserved.</p>
