--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
         <section id="accueil" class="section accueil">
             <div class="container">
-                <h2>Welcome friends !</h2>
-                <p>Here are some point on me :</p>
+                <h2>Hello there !</h2>
+                <p>Here are some points on me :</p>
             </div>
         </section>
 
@@ -36,7 +36,7 @@
             <div class="container">
                 <h2>Training and Certifications</h2>
                 <h5>I am currently in a bachelor's degree in Web dev security and gaming.</h5>
-                <h5>I obtained my BAC with honors during the 2022/2023 session.</h5>
+                <h5>I obtained my BAC during the 2022/2023 session.</h5>
                 <!-- Formation continue et certifications -->
             </div>
         </section>
