r'ajout du logo github + un peu de css

--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
         <section id="projets-personnels" class="section projets-personnels"> <!-- Nouvelle section -->
             <div class="container">
                 <h2>Personal projects</h2>
-                <p><!-- Remplir en fonction de l'avancée de se portefolio et de Metal requieme --> </p>
-                
+                <video controls src="vidéo/Déplacement.mp4">Ah pas de vidéo :( marche pas :(</video>
             </div>
         </section>
 
@@ -199,6 +198,10 @@
             </div>
         </section>
         -->
+
+        <div class="container github">
+            <img src="image/github.jpg" alt="Pas de github :(">
+        </div>
         <footer>
             <div class="container">
                 <p>&copy; 2024 My Portfolio | All rights reserved.</p>
