j'ai oublier le fichier index.html sorry :(

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         -->
 
         <div class="container github">
-            <img src="image/github.jpg" alt="Pas de github :(">
+            <a href="https://github.com/Lucky31001"><img src="image/github.jpg" alt="Pas de github :("></a>
         </div>
         <footer>
             <div class="container">
