my bad j'ai fais des betise sur git ':) '

--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
         <div class="container github">
             <a href="https://github.com/Lucky31001"><img src="image/github.jpg" alt="Pas de github :("></a>
         </div>
+        <!--Je rajouterais d'autres image plus tard-->
         <footer>
             <div class="container">
                 <p>&copy; 2024 My Portfolio | All rights reserved.</p>
